hphp/hack/test/typecheck/const_attribute/static/unset_const.php.like_types.exp
File "unset_const.php", line 11, characters 3-21:
Cannot mutate a class constant (Parsing[1002])
File "unset_const.php", line 12, characters 3-18:
Cannot mutate a class constant (Parsing[1002])
File "unset_const.php", line 13, characters 9-13:
Cannot use [] for reading (NastCheck[3047])
File "unset_const.php", line 11, characters 3-21:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "unset_const.php", line 5, characters 19-35:
This is a dynamic value or an object of type dict<~int, ~string> because it is an unenforceable type
File "unset_const.php", line 12, characters 3-18:
You cannot mutate this (Typing[4011])
File "unset_const.php", line 13, characters 3-17:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
